kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: referendumski-aktivator-referendum-dostojna-smrt-2025
spec:
  selector:
    app: referendumski-aktivator-referendum-dostojna-smrt-2025
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
