kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: referendumski-aktivator-referendum-dostojna-smrt-2025
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/referendum/dostojna-smrt/referendumski-aktivator)$ $1/ redirect; # add trailing slash
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vodici.djnd.si
        - vodici.danesjenovdan.si
        - vodici.lb.djnd.si
      secretName: volitveni-vodici-tls
  rules:
    - host: vodici.djnd.si
      http: &http_paths
        paths:
          - path: /referendum/dostojna-smrt/referendumski-aktivator(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: referendumski-aktivator-referendum-dostojna-smrt-2025
                port:
                  number: 80
    - host: vodici.danesjenovdan.si
      http: *http_paths
    - host: vodici.lb.djnd.si
      http: *http_paths
